# Apollo-Guidance-DSKY-Simulator

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/myapplication/: RoutedExecutiveTraceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/source_annotations/: source_annotations.json
app/src/main/cpp/: AgcCpu.cpp  AgcCpu.h  AgcMemoryImage.cpp  AgcMemoryImage.h  AgcTypes.h  AlarmExecutive.cpp  AlarmExecutive.h  CMakeLists.txt  CompatibilityScenario.cpp  CompatibilityScenario.h  DskyIo.cpp  DskyIo.h  NativeApolloCore.cpp  NativeApolloCore.h  NativeApolloJni.cpp  ScenarioBootstrap.cpp  ScenarioBootstrap.h  SnapshotBuilder.cpp  SnapshotBuilder.h
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
docs/: APOLLO_IMPORT_AUDIT.md  ASSUMPTIONS.md  AUDIT_REPORT.md  AUTHENTICITY.md  COMPATIBILITYSCENARIO_REDUCTION.md  CRASH_FIX_REPORT.md  EXECUTION_MILESTONE_REPORT.md  EXECUTION_PROGRESS_LOG.md  LISTING_PROOF_PATH.md  MAIN_GOALS_ALIGNMENT_AUDIT.md  NEXT_EXECUTION_STEP_REPORT.md  PROJECT_PURPOSE_AUDIT.md  README.md  ROUTINE_ADDRESS_MAP.md  RUNTIME_LAUNCH_STABILITY.md  SCAFFOLDING_REMOVAL_AUDIT.md  SOURCES_TO_VERIFY.md  SOURCE_MAPPING.md  apollo_guidance_dsky_simulator_master_project_charter.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build_derived_yayul.ps1  check_luminary099_executive_alignment.py  extract_source_annotations.py  generate_luminary099_listing.ps1  prove_luminary099_executive_labels.py
(+39 files in other folders)
